# font-tester

./: .gitignore  CMakeLists.txt  README.md  font-tester.desktop  font-tester.pro
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
